完成了页面框架初步设计

--- a/myBlog/app/templates/index.html
+++ b/myBlog/app/templates/index.html
@@ -13,11 +13,11 @@
         <div class="main-wrapper">
             <header>
                 <nav>
-                    <div class="logo"><a href="index.html">涂振宇</a></div>
+                    <div class="logo"><a href="index.html">涂振宇的博客</a></div>
                     <ul>
                         <li id="sidebar_trigger">
-                          <a id="index" href="/login">主页</a>
-                          <a id="technology" href="#">技术</a>
+                          <a id="index" href="/index">主页</a>
+                          <a id="technology" href="/technology">技术</a>
                           <a id="project" href="#">项目</a>
                           <a id="life" href="#">生活</a>
                           <a id="about" href="#">关于</a>
